# juno-scan

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.test.yml  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
api/: openapi.yaml
cmd/juno-scan/: main.go  main_integration_test.go  main_test.go
docker/junocashd/: Dockerfile
docs/: backfill.md  events.md
internal/api/: address_balance_test.go  api.go  api_integration_test.go  api_test.go  backfill_progress_test.go  bearer_auth_test.go  events_filter_test.go  health_readiness_test.go  mempool_refresh_test.go  note_status_test.go  note_summary_test.go  notes_pagination_test.go  witness_fastpath.go  witness_fastpath_test.go
internal/backfill/: backfill.go  canonical_fence_test.go
internal/broker/: broker.go  envelope.go  kafka.go  kafka_stub.go  nats.go  nats_stub.go  rabbitmq.go  rabbitmq_stub.go
internal/config/: config.go  config_test.go
internal/e2e/: auth_e2e_test.go  backfill_e2e_test.go  e2e_test.go  expiry_e2e_test.go  testmain_docker_test.go  zmq_e2e_test.go
internal/events/: events.go  events_test.go
internal/ffi/: scan.go  scan_stub.go
internal/integration/: api_auth_integration_test.go  api_backfill_integration_test.go  expiry_docker_integration_test.go  expiry_mysql_docker_integration_test.go  expiry_reorg_docker_integration_test.go  note_status_store_test.go  note_summary_store_test.go  reorg_docker_integration_test.go  (+5 more)
rust/scan/: Cargo.toml
rust/scan/include/: juno_scan.h
rust/scan/src/: lib.rs  zip316.rs
scripts/: test-docker.sh
(+71 files in other folders)
