[package]
name = "juno_scan"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "juno_scan"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
bech32 = "0.11.0"
f4jumble = "0.1.1"
hex = "0.4.3"
incrementalmerkletree = "0.8.2"
orchard = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.17"
zcash_note_encryption = "0.4.1"
zcash_primitives = "0.26.1"
zcash_protocol = "0.7.2"
zeroize = "1.8.2"
