[package]
name = "juno_scan"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "juno_scan"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
bech32 = "0.11.0"
f4jumble = "0.1.1"
hex = "0.4.3"
incrementalmerkletree = "0.8.2"
orchard = "0.14.0"
shardtree = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.17"
zcash_note_encryption = "0.4.1"
zcash_primitives = { version = "0.28.0", features = ["temporary-zcashd", "transparent-inputs"] }
zcash_protocol = { version = "0.9.0", default-features = false }
zeroize = "1.8.2"

[patch.crates-io]
zcash_protocol = { git = "https://github.com/juno-cash/junocash.git", rev = "786b64fc6c42cc77964565dd7ba81496fa74be81", package = "zcash_protocol" }
